...
                .padding(.trailing, 50)
                
                LottieView(filename: "Timer", stop: $stopTimer).frame(width: 70)
                
                Text("\(cardVM.question.category)")
                    .style(.h7)
                    .accessibility(identifier: "questionCategory")
                
                Text("\(cardVM.question.question)")
                    .style(.h2)
                    .accessibility(identifier: "questionText")
                
            }
        }
        
        func makeButtonsVStack() -> some View {
            
...
